# ignore

./: .gitignore  .gtrconfig  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Ignorefile  README.md  TODO.md  flake.nix  formula.rb  ignore  mise.local.toml.example
.claude/: settings.json  settings.local.json.example
.claude/skills/pr-squash-commit-message/: SKILL.md
.codex/: config.toml.example
.codex.example/: config.toml
.codex.example/rules/: basic-shell.rules  default.rules  gh.rules  git-gtr.rules  git.rules  mise.rules
.codex.example/skills/commit-message-pr-squash-merge/: SKILL.md
.codex.example/skills/draft-commit-message-for-pr-squash-merge/: SKILL.md
.codex.example/skills/pr-create/: SKILL.md
.codex.example/skills/prepare-and-create-pr/: SKILL.md
.codex/rules/: default.rules
.github/workflows/: rust.yml  semantic-pull-request.yml  update-homebrew-formula.yml
rust/: .gitignore  Cargo.toml  Ignorefile
rust/src/: cli.rs  lib.rs  main.rs
rust/src/adapters/: mod.rs  reqwest_gitignore_source.rs  serde_norway_ignorefile_parser.rs
rust/src/domain/: ignore_config.rs  ignorefile.rs  mod.rs
rust/src/ports/: gitignore_source.rs  ignorefile_parser.rs  mod.rs
rust/src/usecases/: generate_gitignore.rs  mod.rs
rust/tests/: help.rs  update.rs  version.rs
sample/: .gitignore  Ignorefile
shell/: ignore
